--- a/Project2 (1).vcxproj
+++ b/Project2 (1).vcxproj
@@ -141,10 +141,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Arena.h" />
+    <ClInclude Include="AutoFactory.h" />
     <ClInclude Include="BattleArena.h" />
     <ClInclude Include="BattleManager.h" />
     <ClInclude Include="BattleUtils.h" />
     <ClInclude Include="Character.h" />
+    <ClInclude Include="characterfactory.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Goblin.h" />
     <ClInclude Include="Mage.h" />
@@ -153,6 +155,7 @@
     <ClInclude Include="Orc.h" />
     <ClInclude Include="UI.h" />
     <ClInclude Include="Warrior.h" />
+    <ClInclude Include="warriormagefactory.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
